k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: netguard
  labels:
    app.kubernetes.io/part-of: netguard
